<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.Diseases.DiseaseDetailsActivity">

    <ScrollView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/backgroundView"

                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#ffffff"
                android:text="name"
                android:fontFamily="sans-serif"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="@color/backgroundView"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif"
                android:text="description"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/symptomsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/backgroundView"
                android:text="@string/symptoms"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txt_symptoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:textColor="#ffffff"
                android:text="@string/symptoms"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/causesTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/backgroundView"
                android:text="@string/causes"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_causes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:textColor="#ffffff"
                android:text="@string/causes"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/treatmentTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/backgroundView"
                android:text="@string/treatment"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txt_treatment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:textColor="#ffffff"
                android:text="@string/treatment"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/resourceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/backgroundView"
                android:text="@string/resource"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txt_resource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:textColor="#ffffff"
                android:text="@string/resource"
                android:textSize="14sp" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>